# nucleo-f207zg-zephyr

./: CMakeLists.txt  Kconfig.i14  README.md  west.yml
app/displaytest1/: Kconfig  prj.conf
app/displaytest1/boards/: nucleo_f207zg.overlay
app/displaytest1/src/: main.c
app/displaytest1/src/ihm/: lcdi2c.h
app/notifytest/: CMakeLists.txt  Kconfig  prj.conf
app/notifytest/boards/: nucleo_f207zg.overlay
app/notifytest/src/: main.c
app/notifytest/src/ihm/: lcdi2c.c
drivers/: CMakeLists.txt  Kconfig
drivers/button/: CMakeLists.txt  Kconfig  button.c  button.h
drivers/display/: CMakeLists.txt  Kconfig
drivers/display/pcf8574/: CMakeLists.txt  Kconfig  pcf8574.c  pcf8574.h
dts/bindings/sensor/: i14,button.yaml
include/drivers/: buttonapi.h
zephyr/: module.yml
